# ReconfROS

./: LICENSE
reconfros_hardware/: FastSenseMS1.tcl  README.md  bit2bin.py  build_ip.tcl  makefile
reconfros_hardware/constraints/: base.xdc
reconfros_hardware/ip/hls/: .gitignore
reconfros_hardware/ip/hls/mm2vs/: mm2vs.cpp  mm2vs.h  mm2vs_tb.cpp
reconfros_hardware/ip/hls/mm2vs/solution1/: script.tcl
reconfros_hardware/ip/hls/trail_detection/: trail_detection.cpp  trail_detection.h  trail_detection_tb.cpp
reconfros_hardware/ip/hls/trail_detection/solution1/: script.tcl
reconfros_hardware/ip/hls/vs2mm/: vs2mm.cpp  vs2mm.h  vs2mm_tb.cpp
reconfros_hardware/ip/hls/vs2mm/solution1/: script.tcl
reconfros_hardware/ros/trail_detection/: CMakeLists.txt  Doxyfile  package.xml
reconfros_hardware/ros/trail_detection/include/trail_detection/: buffer.h
reconfros_hardware/ros/trail_detection/include/trail_detection/fpga/: fpga.h
reconfros_hardware/ros/trail_detection/include/trail_detection/fpga/ip/: mm2vs.h  trail_detection.h  vs2mm.h
reconfros_hardware/ros/trail_detection/include/trail_detection/ros_wrapper/: misc.h  params.h  pipeline_ros_wrapper.h  webcam.h
reconfros_hardware/ros/trail_detection/src/: buffer.cpp  trail_detection_eval_node.cpp  trail_detection_webcam_node.cpp
reconfros_hardware/ros/trail_detection/src/fpga/: fpga.cpp  trail_detection.cpp
reconfros_hardware/ros/trail_detection/src/ros_wrapper/: misc.cpp  params.cpp  pipeline_ros_wrapper.cpp  webcam.cpp
reconfros_hardware/src/: FastSenseMS1_design_wrapper.vhd
reconfros_software/: CMakeLists.txt  README.md  package.xml
reconfros_software/cfg/: CV.cfg  NAV.cfg  PIPELINE.cfg
reconfros_software/launch/: demo.launch  navigation.launch  pipeline.launch  trail_follower.launch
reconfros_software/simulation/launch/: simulation.launch  small_simulation.launch  spawn_ceres_reconfros_software.launch  upload_ceres_reconfros_software.launch
reconfros_software/simulation/models/small_world/: model.config  model.sdf  smallworld.dae
reconfros_software/simulation/urdf/: ceres_reconfros_software.urdf.xacro
reconfros_software/simulation/worlds/: reconfros_software.world  reconfros_software_brighter.world  reconfros_software_new.world  reconfros_software_small.world
reconfros_software/src/: cv_node.cpp  final_pipeline.cpp  navigation.cpp
