<?xml version="1.0"?>
<package format="2">
    <name>trail_detection</name>
    <version>0.0.0</version>
    <description>The trail_detection package</description>
    <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
    <license>MIT</license>
    <author email="gjulian@uos.de">Julian Gaal</author>
    <author email="mflottmann@uos.de">Marcel Flottmann</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <export></export>
</package>
